# crowdeval

./: .env.ci  .env.example  .flake8  .gitignore  Dockerfile  LICENSE.md  README.md  README.rst  autoapp.py  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  pyproject.toml  testoutput.txt  webpack.mix.js
.github/workflows/: codeql-analysis.yml  test.yml
assets/js/: app.js  archive.js  forms.js  tooltip.js
assets/scss/: _variables.scss  app.scss
bert/: Dockerfile  flow.jina.yml
crowdeval/: app.py  commands.py  database.py  evaluation_commands.py  extensions.py  settings.py  template_filters.py
crowdeval/explore/: __init__.py  routes.py
crowdeval/pages/: __init__.py  routes.py
crowdeval/posts/: __init__.py  models.py  routes.py
crowdeval/templates/: index.html  layout.html
crowdeval/test/: views.py
crowdeval/users/: __init__.py  routes.py
infrastructure/bert/: Dockerfile  start.sh
migrations/versions/: 88240bf7eb74_create_rating_table.py  b4604a339ce5_.py  bd2fc69a03b9_.py  c7134a902cf1_initial_migration.py  d38c9ab2e1d1_.py  f247b74f218f_initial_migration.py
seeds/kochkina_et_al_PHEME/: README.md  ferguson-all-rnr-threads.non-rumours.json  ferguson-all-rnr-threads.rumours.json  germanwings-crash-all-rnr-threads.non-rumours.json  germanwings-crash-all-rnr-threads.rumours.json  gurlitt-all-rnr-threads.non-rumours.json  gurlitt-all-rnr-threads.rumours.json  ottawashooting-all-rnr-threads.non-rumours.json  (+6 more)
tests/: conftest.py  factories.py  fixtures.py  settings.py  test_crowdeval.py
webapp/: .env.ci  .env.dev  .env.prod  autoapp.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
webapp/assets/js/: charts.js
webapp/assets/scss/: app.scss
webapp/assets/scss/components/: _embed.scss  _rating-field.scss  _rating.scss
webapp/assets/scss/pages/: _home.scss  _post.scss
webapp/crowdeval/: __init__.py  app.py  commands.py  database.py  evaluation_commands.py  settings.py  template_filters.py
webapp/crowdeval/explore/: __init__.py  routes.py
webapp/crowdeval/pages/: __init__.py  routes.py
webapp/crowdeval/posts/: models.py  routes.py
webapp/crowdeval/posts/forms/: rate_post_form.py
webapp/crowdeval/posts/support/: dummy_post.py  platform.py  post_recogniser.py  scoring.py  twitter_post.py
webapp/crowdeval/search/: __init__.py
webapp/crowdeval/search/support/: __init__.py  db_mixin.py  elasticsearch.py  ext_bert.py
webapp/crowdeval/templates/: index.html
webapp/crowdeval/templates/layout/: _footer.html  _nav.html  base.html
webapp/crowdeval/templates/pages/: license.html  privacy.html  terms.html
webapp/crowdeval/templates/posts/: explore.html  rate.html  show.html  stats.html
webapp/crowdeval/users/: models.py
webapp/infrastructure/docker/: Dockerfile  docker-entrypoint.sh
webapp/infrastructure/elasticsearch/: posts.json
webapp/migrations/versions/: e548cfba9560_.py
webapp/seeds/kochkina_et_al_PHEME/: README.md  charliehebdo-all-rnr-threads.rumours.json  ebola-essien-all-rnr-threads.rumours.json  jsonify.py  prince-toronto-all-rnr-threads.rumours.json
webapp/tests/: conftest.py  fixtures.py  settings.py
webapp/tests/feature/: test_index.py  test_rate_post.py
webapp/tests/fixtures/bert/: README.md  test.pickle
webapp/tests/fixtures/tweets/: 1362771196945793024.json
webapp/tests/unit/posts/support/: test_post_recogniser.py
(+29 files in other folders)
