[tool.poetry]
name = "crowdeval"
version = "0.1.0"
description = ""
authors = ["Freddy Heppell <freddy@freddyheppell.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
